--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,9 +24,9 @@
     <security-constraint>
         <display-name>Constraint1</display-name>
         <web-resource-collection>
-            <web-resource-name>Horia</web-resource-name>
+            <web-resource-name>Admin</web-resource-name>
             <description/>
-            <url-pattern>/TopChef/*</url-pattern>
+            <url-pattern>/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
