--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\horia.mut\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-373428234.properties
+deploy.ant.properties.file=C:\\Users\\Mateli\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv31343425232.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Development/Tools/glassfish/glassfish/domains/domain1
-j2ee.server.home=C:/Development/Tools/glassfish/glassfish
-j2ee.server.instance=[C:\\Development\\Tools\\glassfish\\glassfish;C:\\Development\\Tools\\glassfish\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=C:/Development/Tools/glassfish
+j2ee.server.domain=C:/Users/Mateli/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\horia.mut\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Mateli\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
