--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.cdi-api-1.2.jar=C:\\Users\\Mateli\\Downloads\\cdi-api-1.2.jar
 file.reference.cdi-api.jar=C:\\Development\\Tools\\glassfish\\glassfish\\modules\\cdi-api.jar
 includes=**
 j2ee.compile.on.save=true
@@ -52,7 +53,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.cdi-api.jar}
+    ${file.reference.cdi-api.jar}:\
+    ${file.reference.cdi-api-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
